--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <style>
+    body{
+      width: 200px;
+      height: 200px;
+    }
+  </style>
 </head>
 <body>
-    <h1>hello world</h1>
+  <h1>hello world</h1>
+  <div><a href="#" id="start">开启</a></div>
+  <script src="js/jquery.js"></script>
+  <script src="js/popup.js"></script>
 </body>
 </html>
