修改百度去除广告

--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
 <body>
   <h1>hello world</h1>
   <div><a href="#" id="start">开启</a></div>
+  <button class="popupSendMessage">popupSendMessage</button>
   <script src="js/jquery.js"></script>
   <script src="js/popup.js"></script>
 </body>
