--- a/demo_json.html
+++ b/demo_json.html
@@ -3,59 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/jquery.jsonview.css" />
   <title>Document</title>
 </head>
 <body>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
-  <h1>666666</h1>
+  <button id="collapse-btn">Collapse</button>
+  <button id="expand-btn">Expand</button>
+  <button id="toggle-btn">Toggle</button>
+  <button id="toggle-level1-btn">Toggle level1</button>
+  <button id="toggle-level2-btn">Toggle level2</button>
+  <div id="json"></div>
+  <h2>Data Collapsed</h2>
+  <div id="json-collapsed"></div>
+  <script src="js/jquery.js"></script>
+  <script src="js/jquery.jsonview.js"></script>
+  <script src="js/demo_json.js"></script>
 </body>
 </html>
