--- a/newtab.html
+++ b/newtab.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/newtab.css">
   <title>Document</title>
 </head>
 <body>
+  <div class="bg"></div>
   <h1>hello world</h1>
 </body>
 </html>
