--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,15 @@
 </head>
 <body>
   <h1>hello world</h1>
-  <div><a href="#" id="start">开启</a></div>
-  <button class="popupSendMessage">popupSendMessage</button>
+  <div>
+    <p>跨域:</p>
+    <input type="text">
+    <a href="#" id="start">开启</a>
+  </div>
+  <div>
+    <p>测试消息发送:</p>
+    <button class="popupSendMessage">popupSendMessage</button>
+  </div>
   <script src="js/jquery.js"></script>
   <script src="js/popup.js"></script>
 </body>
