--- a/popup.html
+++ b/popup.html
@@ -11,17 +11,16 @@
   </style>
 </head>
 <body>
-  <h1>hello world</h1>
   <div>
     <p>跨域:</p>
-    <input type="text">
-    <a href="#" id="start">开启</a>
+    <input id="webrequestValue" type="text">
+    <a href="#" id="webrequestclose">关闭</a><a href="#" id="webrequestOpen">开启</a>
   </div>
   <div>
-    <p>测试消息发送:</p>
-    <button class="popupSendMessage">popupSendMessage</button>
+    <p>书签:</p>
+    <a href="#" id="bookmarkClose">关闭</a><a href="#" id="bookmarkOpen">开启</a>
   </div>
-  <script src="js/jquery.js"></script>
+  <!-- <script src="js/jquery.js"></script> -->
   <script src="js/popup.js"></script>
 </body>
 </html>
